# hack_attack_the_noisy_checkers

./: 4_rest.sql  README.md  folium_map.py  noise_data.json  note.txt  pyproject.toml  restaurants.json  restourants.json
map/: app.py  pyproject.toml
